Fix long name causing layout shift

--- a/src/styles/components/cards.css
+++ b/src/styles/components/cards.css
@@ -17,12 +17,17 @@
   color: var(--white);
 }
 
-.card-name {
+.card-name-container {
   max-width: 100%;
   display: flex;
   align-items: center;
   gap: 0.8rem;
   min-height: 3.8rem;
+}
+
+.card-name {
+  overflow-wrap: break-word;
+  width: 100%;
 }
 
 .input-name {
